tests/ui/type-alias-impl-trait/implied_lifetime_wf_check4_static.stderr
error[E0310]: the parameter type `A` may not live long enough
  --> $DIR/implied_lifetime_wf_check4_static.rs:5:46
   |
LL |     fn defining<A: 'static>(s: A) -> Ty<A> { s }
   |                                              ^ ...so that the type `A` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL |     fn defining<A: 'static + 'static>(s: A) -> Ty<A> { s }
   |                            +++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
